# yact

./: .yactrc.toml  Cargo.toml  README  README.md
.github/workflows/: rust.yml
src/: diff3.rs  lib.rs  tests.rs
