[package]
name = "yact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = {version = "0.18.2", default_features = false}
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
