[package]
name = "yact"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
git2 = {version = "0.19", default-features = false}
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4"] }
